# nanoBitNet

./: .gitignore  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  bench.py  nanobitnet.py  pyproject.toml  requirements.txt  sample.py  train.py
docs/: PAPER_NOTES.md
examples/: bitlinear_30_lines.py
launch/: CHECKLIST.md  POSTS.md  blog_post.md
tests/: test_nanobitnet.py
