[project]
name = "nanobitnet"
version = "0.1.0"
description = "A tiny educational BitNet b1.58 implementation in pure PyTorch."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
dependencies = [
  "torch>=2.1",
  "requests>=2.31",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
